<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_heading"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textSize="26sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_min_hand_detection_confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_min_hand_detection_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-light"
                android:text="@string/min_hand_detection_confidence"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:layout_width="wrap_content"
                android:id="@+id/slider_min_hand_detection_confidence"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_min_hand_detection_confidence"
                android:valueFrom="0.0"
                android:valueTo="1.0"
                app:labelBehavior="floating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/slider_min_hand_detection_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_hand_detection_confidence"
                android:text="@string/string_0_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/slider_min_hand_detection_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_hand_detection_confidence"
                android:text="@string/string_1_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_min_hand_presence_confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text_view_min_hand_presence_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-light"
                android:text="@string/min_hand_presence_confidence"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:layout_width="wrap_content"
                android:id="@+id/slider_min_hand_presence_confidence"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_min_hand_presence_confidence"
                android:valueFrom="0.0"
                android:valueTo="1.0"
                app:labelBehavior="floating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/slider_min_hand_presence_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_hand_presence_confidence"
                android:text="@string/string_0_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/slider_min_hand_presence_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_hand_presence_confidence"
                android:text="@string/string_1_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_min_tracking_confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text_view_min_tracking_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-light"
                android:text="@string/min_tracking_confidence"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:layout_width="wrap_content"
                android:id="@+id/slider_min_tracking_confidence"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_min_tracking_confidence"
                android:valueFrom="0.0"
                android:valueTo="1.0"
                app:labelBehavior="floating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/slider_min_tracking_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_tracking_confidence"
                android:text="@string/string_0_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/slider_min_tracking_confidence"
                app:layout_constraintTop_toBottomOf="@+id/slider_min_tracking_confidence"
                android:text="@string/string_1_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_gestures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/gestures_help"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>